--- a/Views/ProductList/Index.cshtml
+++ b/Views/ProductList/Index.cshtml
@@ -23,6 +23,9 @@
                 <input id="filterPrice" type="text" class="form-control" placeholder="Filteren bij Prijs">
             </th>
             <th>
+                <input id="filterDiscountPrice" type="text" class="form-control" placeholder="Filteren bij Korting">
+            </th>
+            <th>
                 <input id="filterStock" type="text" class="form-control" placeholder="Filteren bij Voorraad">
             </th>
             <th>
@@ -41,6 +44,9 @@
             </th>
             <th>
                 Prijs
+            </th>
+            <th>
+                Korting Prijs
             </th>
             <th>
                 Voorraad
