--- a/Views/Products/Create3.cshtml
+++ b/Views/Products/Create3.cshtml
@@ -86,6 +86,8 @@
                     
                     <input asp-for="ProductsoortId" class="form-control" placeholder="ProductsoortId" type="hidden"  value= "@productsoortid" />
                     <span asp-validation-for="ProductsoortId" class="text-danger"></span>
+                    <input asp-for="DiscountedPrice" class="form-control" placeholder="ProductsoortId" type="hidden"  value= "-1" />
+                    <span asp-validation-for="DiscountedPrice" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
