--- a/Views/Cart/oldOrderDetails.cshtml
+++ b/Views/Cart/oldOrderDetails.cshtml
@@ -21,7 +21,7 @@
         </tr>
         </thead>
         <tbody>
-        @foreach (Bestelling item in ViewBag.bestelling)
+        @foreach (BesteldeItem item in ViewBag.besteldeItem)
         {
             <tr>
                 <td>
