Adding the ProductwaardeId in the BesteldeItem table

--- a/Views/EditProduct/Index.cshtml
+++ b/Views/EditProduct/Index.cshtml
@@ -1,6 +1,6 @@
 @using Org.BouncyCastle.Asn1.Cms
-@using WebApp1.products
-@model WebApp1.products.Productwaarde
+@using WebApp1.Models
+@model WebApp1.Models.Productwaarde
 @{
     ViewData["Title"] = "Product Bewerken";                                
     Productwaarde product = ViewBag.EditProduct;
