--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -1,5 +1,5 @@
-@using WebApp1.products
-@model IEnumerable<WebApp1.products.Productwaarde>
+@using WebApp1.Models
+@model IEnumerable<WebApp1.Models.Productwaarde>
 @{
     int currentColumn = 0;
     List<Productwaarde> col2Items = new List<Productwaarde>();
