--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using WebApp1.products
-@model IEnumerable<WebApp1.products.Productwaarde>
+﻿@using WebApp1.Models
+@model IEnumerable<WebApp1.Models.Productwaarde>
 @{
     ViewData["Title"] = "Home Page";
     List<Productwaarde> products = Model.ToList();
