--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,5 +1,5 @@
 @using WebApp1.Models
-@model WebApp1.Models.Productwaarde
+@model WebApp1.Products.Productwaarde
 <link rel="stylesheet" href="~/css/shopping_cart.css">
 <div class="pageRoot">
     <h3>Cart Page</h3>
