--- a/Views/EditProduct/Index.cshtml
+++ b/Views/EditProduct/Index.cshtml
@@ -1,6 +1,7 @@
 @using Org.BouncyCastle.Asn1.Cms
 @using WebApp1.Models
-@model WebApp1.Models.Productwaarde
+@using WebApp1.Products
+@model WebApp1.Products.Productwaarde
 @{
     ViewData["Title"] = "Product Bewerken";                                
     Productwaarde product = ViewBag.EditProduct;
