--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using WebApp1.Models
-@model IEnumerable<WebApp1.Models.Productwaarde>
+@using WebApp1.Products
+@model IEnumerable<WebApp1.Products.Productwaarde>
 @{
     ViewData["Title"] = "Home Page";
     List<Productwaarde> products = Model.ToList();
