--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -1,5 +1,6 @@
 @using WebApp1.Models
-@model IEnumerable<WebApp1.Models.Productwaarde>
+@using WebApp1.Products
+@model IEnumerable<WebApp1.Products.Productwaarde>
 @{
     int currentColumn = 0;
     List<Productwaarde> col2Items = new List<Productwaarde>();
