--- a/Views/Products/Create2.cshtml
+++ b/Views/Products/Create2.cshtml
@@ -21,7 +21,7 @@
                 // Create an <input> element, set its type and name attributes
                 var radio = document.createElement("input");
 				radio.type = "radio";
-				radio.name = "hi";
+				radio.name = "productsoortt";
 				radio.value = end[0];
                 container.appendChild(radio);
                 // Append a line break 
@@ -35,7 +35,7 @@
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Create2">
+            <form action="@Url.Action("Create3", "Products")" method="get">
                 <div id="container" class="form-group"></div>
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-default" />
