Completed: statistics page

--- a/Views/Cart/oldOrders.cshtml
+++ b/Views/Cart/oldOrders.cshtml
@@ -28,7 +28,7 @@
                     @item.BestellingId
                 </td>
                 <td>
-                    @item.Date
+                    @item.Date.ToShortDateString();
                 </td>
                 <td>
                     @item.Status
