Fixed: products page layout and statistics header link

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     <a class="dropdown-item" href="@Url.Action("Index", "CategoryList")">Overzicht Product Categorieën</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "ProductList")">Overzicht Producten</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="@Url.Action("Statistics", "Chart")">Site Statistieken</a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "Statistics")">Site Statistieken</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "UserManagement")">Gebruikers beheren</a>
                 </div>
             }
