--- a/Views/Home/Mainpage.cshtml
+++ b/Views/Home/Mainpage.cshtml
@@ -39,13 +39,14 @@
         <div id="categoryArea">
             <div class="categoryTitle">Categorieën</div>
             <form asp-action="Mainpage">
-                <div class = "checkbox checkboxlist col-sm-9">
-             @for (var i = 0; i < Model.productsoortfilters.Count; i++)
-                 {
-                     <input type="checkbox" asp-for="@Model.productsoortfilters[i].selected"  />@Model.productsoortfilters[i].Productsoorts.Naam
-                     <input type="hidden" asp-for="@Model.productsoortfilters[i].Productsoorts.Naam" /> 
-                 }
-                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Filter</button>
+                <div class = "checkbox checkboxlist">
+                    @for (var i = 0; i < Model.productsoortfilters.Count; i++)
+                    {
+                        <input type="checkbox" asp-for="@Model.productsoortfilters[i].selected"  />@Model.productsoortfilters[i].Productsoorts.Naam
+                        <input type="hidden" asp-for="@Model.productsoortfilters[i].Productsoorts.Naam" /> <br>
+                    }
+                    <button class="btn btn-outline-success" type="submit">Filter</button>
+                </div>
             </form>
             <div>
                 <a asp-action="Mainpage">Terug naar alle producten</a>
