Fixed some small bugs and deleted some useless junk

--- a/Views/ProductList/Index.cshtml
+++ b/Views/ProductList/Index.cshtml
@@ -66,4 +66,4 @@
     </ul>
 </div>
 <br>
-<script type="text/javascript" src="~/js/loadProductsList.js"></script>
+<script type="module" src="~/js/loadProductsList.js"></script>
