Added error checking on some actions + minor JS changes

--- a/Views/CategoryList/Index.cshtml
+++ b/Views/CategoryList/Index.cshtml
@@ -54,4 +54,4 @@
     </ul>
 </div>
 <br>
-<script type="text/javascript" src="~/js/loadCategoryList.js"></script>
+<script type="module" src="~/js/loadCategoryList.js"></script>
