--- a/Views/OrderList/EditStatus.cshtml
+++ b/Views/OrderList/EditStatus.cshtml
@@ -21,7 +21,7 @@
         <label class="label">Nieuwe bestel status:</label>
         <select class="form-control" name="selection">
             <option value="OnderWeg">OnderWeg</option>
-            <option value="Bezorgt">Bezorgt</option>
+            <option value="Bezorgd">Bezorgt</option>
             <option value="In Behandeling">In Behandeling</option>
             <option value="Geannuleerd">Geannuleerd</option>
             <option value="Mislukt">Mislukt</option>
