--- a/Views/OrderList/Index.cshtml
+++ b/Views/OrderList/Index.cshtml
@@ -63,4 +63,4 @@
     </ul>
 </div>
 <br>
-<script type="text/javascript" src="~/js/loadOrderList.js"></script>
+<script type="module" src="~/js/loadOrderList.js"></script>
