Added: pagination to order history + more details on checkout pages

--- a/Views/Cart/EmptyShoppingCart.cshtml
+++ b/Views/Cart/EmptyShoppingCart.cshtml
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="~/css/shopping_cart.css">
 <div class="pageRoot">
-    <h2>Your Shopping Cart</h2>
+    <h2>Jouw winkelmand</h2>
     <hr>
-    Your shopping cart is empty! checkout the <a asp-controller="Home" asp-action="index">Home page</a> for products.
+    Je winkelmand is momenteel leeg. Bekijk de <a asp-controller="Home" asp-action="index">Product pagina</a> voor producten.
 </div>
