--- a/Views/Cart/oldOrderDetails.cshtml
+++ b/Views/Cart/oldOrderDetails.cshtml
@@ -6,16 +6,16 @@
         <thead>
         <tr>
             <th>
-                Product naam
+                Product Naam
             </th>
             <th>
-                Product prijs
+                Product Prijs
             </th>
             <th>
-                Product kwantiteit
+                Product Kwantiteit
             </th>
             <th>
-                Product foto
+                Product Foto
             </th>
             <th></th>
         </tr>
