--- a/Views/Cart/pay.cshtml
+++ b/Views/Cart/pay.cshtml
@@ -1,8 +1,15 @@
 <link rel="stylesheet" href="~/css/shopping_cart.css">
 <div class="pageRoot">
-    <h2>Order confirmed!</h2>
+    <h2>Bestelling bevestigd!</h2>
     <hr>
-    You will recieve an email with confirmation of your order!
+    <center>
+        <img src="~/images/success_checkmark.png" height="100" width="100"><br>
+        <strong>
+            Jouw bestelling is betaald en is nu geregistreert bij ons!<br>
+            Binnen enkele momenten zal je een bevestigingsmail krijgen met de factuur.<br>
+            <br>Bedankt voor het bestellen bij onze webshop!
+        </strong>
+    </center>
     <br>
     <a asp-controller="Home" asp-action="index">Home</a>
 </div>
