--- a/Views/Cart/oldOrders.cshtml
+++ b/Views/Cart/oldOrders.cshtml
@@ -1,18 +1,19 @@
+@model PaginationViewModel<Bestelling>
 <link rel="stylesheet" href="~/css/product_creation_generic.css">
 <link rel="stylesheet" href="~/css/favorites.css">
 <div class="pageRoot">
-    <h2>Jouw vorige Bestellingen</h2>
+    <h2>Bestellings geschiedenis</h2>
     <table class="table">
         <thead>
         <tr>
             <th>
-                Bestelling Id
+                Bestelling ID
             </th>
             <th>
-                Bestelling datum
+                Bestelling Datum
             </th>
             <th>
-                Bestelling status
+                Bestelling Status
             </th>
             <th>
                 Details
@@ -21,7 +22,7 @@
         </tr>
         </thead>
         <tbody>
-        @foreach (Bestelling item in ViewBag.bestellingen)
+        @foreach (Bestelling item in Model.Data)
         {
             <tr>
                 <td>
@@ -44,4 +45,44 @@
         }
         </tbody>
     </table>
+    <br>
+    <ul class="pagination">
+        @if (Model.PageNumber == 1)
+        {
+            <li class="page-item disabled">
+                <a class="page-link"  tabindex="-1">Vorige</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item">
+                <a class="page-link" asp-action="oldOrders" asp-route-pageNumber="@(Model.PageNumber - 1)">Vorige</a>
+            </li>
+        }
+        @for (int i = 0; i < Model.TotalPages; i++)
+        {
+            if ((i + 1) == Model.PageNumber)
+            {
+                <li class="page-item active">
+                    <a class="page-link" asp-action="oldOrders" asp-route-pageNumber="@(i + 1)">@(i + 1) <span class="sr-only">current</span></a>
+                </li>
+            }
+            else
+            {
+                <li class="page-item"><a class="page-link" asp-action="oldOrders" asp-route-pageNumber="@(i + 1)">@(i + 1)</a></li>
+            }
+        }
+        @if (Model.PageNumber == Model.TotalPages)
+        {
+            <li class="page-item disabled">
+                <a class="page-link"  tabindex="-1">Volgende</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item">
+                <a class="page-link" asp-action="oldOrders" asp-route-pageNumber="@(Model.PageNumber + 1)">Volgende</a>
+            </li>
+        }
+    </ul>
 </div>
